--- a/.gitignore
+++ b/.gitignore
@@ -216,3 +216,4 @@ notebooks/test_aws_emr.ipynb
 com/griddynamics/dsl/ml/tests/test/scripts/test_streaming_job.py
 com/griddynamics/dsl/ml/tests/test/scripts/test_word_count.py
 com/griddynamics/dsl/ml/tests/testing_aws_emr.ipynb
+test_streaming_job.py
